# nuclear-voice

./: .gitignore  CLAUDE.md  README.md  crew_voices.json  docker-compose.yml  download_models.sh  main.py  nuclear-voice.service  nuclear_client.py  pyproject.toml
deploy/: install.sh  nuclear-voice.service
scripts/: SCRIPTS.md  deploy_b450.sh
