[project]
name = "nuclear-voice"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "faster-whisper>=1.0",
    "torch>=2.2",
    "torchaudio>=2.2",
    "transformers>=4.40",
    "pyttsx3>=2.90",
    "webrtcvad>=2.0",
    "numpy>=1.24",
    "soundfile>=0.12",
    "kokoro-onnx>=0.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
